# PrimalMeetLWE

./: README.md  dependency_test.py
estimator/: README.md  estimator.py  utils.py
estimator/crypto23/: estimate.py  estimator.py  play.py  run_test_he.py  run_test_pqc.py  utils.py
estimator/crypto23/log/: (Error)1499_2048_158_lv1.txt  (Error)761_4591_286_lv1.txt  1499_2048_158_lv2.txt  15_599_128_lv3.txt  15_699_128_lv2.txt  16_1353_192_lv3.txt  16_1553_192_lv3.txt  500_16384_74_lv3.txt  509_2048_254_lv1.txt  512_12289_154_lv1.txt  512_12289_154_lv2.txt  512_12289_154_lv3.txt  512_12289_230_lv1.txt  512_12289_230_lv3.txt  659_2048_76_lv1.txt  659_2048_98_lv1.txt  677_2048_254_lv3.txt  761_4591_286_lv3.txt  857_5167_322_lv2.txt  857_5167_322_lv3.txt  n_32768_logq_768_hw_192_lv_1.txt  n_32768_logq_768_hw_192_lv_2.txt
estimator/crypto23_rebut/: README.md  estimator.py  utils.py
estimator/crypto23_rebut/log/: (Error)509_2048_254_lv1.txt  (Error)653_4621_288_lv1.txt  (Error)677_2048_254_lv1.txt  (Error)821_4096_510_lv1.txt  (Error)857_5167_322_lv1.txt  1087_2048_126_lv3.txt  1499_2048_158_lv3.txt  15_599_128_lv1.txt  15_699_128_lv1.txt  15_768_192_lv2.txt  15_768_192_lv3.txt  16_1450_64_lv1.txt  16_1453_192_lv1.txt  653_4621_288_lv3.txt  659_2048_98_lv2.txt  761_2048_84_lv3.txt  761_4591_286_lv2.txt
estimator/crypto23_submit/: estimator.py  run_test_he.py  run_test_pqc.py
estimator/ec24/: cur.py  estimator.py  he_test.py  pqc_test.py  utils.py
estimator/euro23_submit/: NTRUlv3test.txt  estimate.py
estimator/large_Rp_rep/: estimator.py
estimator/logs/: 1087_2048_126_1_MATZOV.txt  1087_2048_126_2_MATZOV.txt  1087_2048_126_3_MATZOV.txt  14_426_256_1.txt  14_426_256_2.txt  14_426_256_3.txt  15_699_128_1.txt  15_699_128_1_MATZOV.txt  15_699_128_2.txt  15_699_128_2_MATZOV.txt  15_699_128_3.txt  15_699_128_3_MATZOV.txt  15_768_192_1.txt  15_768_192_1_MATZOV.txt  15_768_192_2.txt  15_768_192_2_MATZOV.txt  15_768_192_3.txt  15_768_192_3_MATZOV.txt  16_121_32_1_MATZOV.txt  16_121_32_2_MATZOV.txt  16_121_32_3_MATZOV.txt  16_1450_64_1.txt  16_1450_64_1_MATZOV.txt  16_1450_64_2_MATZOV.txt  16_1450_64_3.txt  16_1450_64_3_MATZOV.txt  16_1553_192_1.txt  16_1553_192_1_MATZOV.txt  16_1553_192_2.txt  16_1553_192_2_MATZOV.txt  16_1553_192_3.txt  16_1553_192_3_MATZOV.txt  16_1568_256_1.txt  16_1568_256_2.txt  16_1568_256_3.txt  509_2048_254_1_MATZOV.txt  509_2048_254_2_MATZOV.txt  509_2048_254_3_MATZOV.txt  653_4621_288_1_MATZOV.txt  653_4621_288_2_MATZOV.txt  (+10 more)
euro_submit/: run_test_he.py  test.py  utils.py
experiments/: CMakeLists.txt  README.md  dependence_test.py  gaussian_approx.sage
experiments/c_fast/: CMakeLists.txt  README.md  main.cpp
experiments/c_fast/exec/: admissible_test.cpp  cons_simulation.cpp  constraint_test.cpp  dependency_test.cpp  jensen_gap.cpp  lsh_simulation.cpp  ncf_model_test.cpp  ncf_near_col_test.cpp  ncf_uniform_test.cpp  near_collision_test.cpp  pair_model_test.cpp  primal_meet_lwe.cpp  split_uniform_test.cpp  uniform_test.cpp  variance_test.cpp
experiments/c_fast/exec/legacy/: constraint_test.cpp  fixed_constraint_test.cpp  near_collision_test.cpp
experiments/c_fast/src/: functions.cpp  functions.h  utils.cpp  utils.h
experiments/exec/: cvp_test.cpp  expectation_exchange.cpp  meet_lwe_matrix.cpp  ncf_uniform_test.cpp  split_uniform_test.cpp
experiments/sage_cm/: uniform.sage
experiments/sage_slow/: basic.py  run.py
experiments/src/: cmdline.h  functions.cpp  functions.h  torus_lsh.cpp  torus_lsh.h  utils.cpp  utils.h
(+80 files in other folders)
